navbar#21: fix for icons and text not aligning correctly

--- a/css/sbft.css
+++ b/css/sbft.css
@@ -132,3 +132,7 @@ footer{
     display: flex;
     justify-content: space-between;
 }
+
+.nav-center {
+    text-align: center;
+}
